<resources>
    <string name="iii_app_name">myBook 閱讀器(Pad)</string>
    <string name="iii_showAM_exception">訊息</string>
    <string name="iii_showAM_ok">確認</string>
    <string name="iii_showAM_cancel">取消</string>
    <string name="iii_showAM_wait">wait</string>
    <string name="iii_unWork">未完成</string>
    <string name="iii_reading_percentage">位於全書的處</string>
    <string name="iii_button_back">返回</string>
    <string name="iii_zoom_in">+</string>
    <string name="iii_zoom_out">-</string>
    <string name="iii_setting_backup_read_record_value">立即備份</string>
    <string name="iii_setting_download_read_record_value">立即下載</string>
    <string name="iii_setting_del_all_download_book_value">立即刪除</string>
    <string name="iii_setting_now_register">立即註冊</string>
    <string name="iii_setting_now_login">立即登入</string>
    <string name="iii_setting_now_logout">立即登出</string>
    <string name="iii_setting_logout">登出</string>
    <string name="iii_setting_logout_confirm">登出後應用程式會自動重新啟動，是否登出?</string>
    <string name="iii_relogin">重新登入</string>
    <string name="iii_relogin_confirm">應用程式會自動登出並重新啟動，是否繼續?</string>
    <string name="iii_not_support_wan">很抱歉，本服務尚未支援網外用戶!</string>
    <string name="iii_last_page_to_store">點選此處，進入myBook書城</string>
    <string name="iii_last_page_hint_formal_1">感謝您購買此書，更多有</string>
    <string name="iii_last_page_hint_formal_2">關此書”作者”與”出版社”之推</string>
    <string name="iii_last_page_hint_formal_3">薦書籍，請點選下方進入!</string>
    <string name="iii_last_page_hint_trial_1">本書為試閱版，</string>
    <string name="iii_last_page_hint_trial_2">請問是否立即購買正式版?</string>
    <string name="iii_introduction">操作說明</string>
    <string name="iii_sample_text_1">台灣大哥大 myBook書城24小時不打烊!</string>
    <string name="iii_sample_text_2">  myBook store of TaiwanMobile always open for you.</string>
    <string name="iii_searching">搜尋中，請稍候...</string>
    <string name="iii_mebook">有聲書</string>
    <string name="iii_mebook_title">&amp;lt;有聲書&amp;gt;</string>
    <string name="iii_read_record_backuping">閱讀紀錄備份中，請稍候...</string>
    <string name="iii_read_record_backup_ok">上傳成功</string>
    <string name="iii_read_record_backup_error">上傳失敗，請稍後再試！</string>
    <string name="iii_read_record_downloading">閱讀紀錄下載中，請稍候...</string>
    <string name="iii_read_record_download_ok">下載成功</string>
    <string name="iii_read_record_download_error">下載失敗，請稍後再試！</string>
    <string name="iii_setting_deling">刪除檔案中，請稍後</string>
    <string name="iii_setting_del_done">書本已刪除</string>
    <string name="iii_download_online_list">下載線上書櫃清單中，請稍候...</string>
    <string name="iii_download_no_space">空間不足，無法下載，請先移除部份檔案！</string>
    <string name="iii_del_all_book">刪除所有已下載書籍</string>
    <string name="iii_del_all_book_message">此動作會把書櫃中所有的書籍刪除，您確定要進行本動作？</string>
    <string name="iii_re_register">重新註冊手機</string>
    <string name="iii_re_register_message">重新註冊後，您已經下載到終端設備內的書籍將無法開啟，刪除書籍後重新至線上書櫃下載即可正常使用!</string>
    <string name="iii_about_twm">關於myBook</string>
    <string name="iii_net_not_conn">網路連線失敗，無法註冊手機！請稍後或移動您的所在地至訊號良好位置，再重新開啓程式一次！</string>
    <string name="iii_server_time_out">伺服器逾時沒有回應，無法註冊手機！請稍後或移動您的所在地至訊號良好位置，再重新開啓程式一次！</string>
    <string name="iii_get_p12_error">無法產生註冊檔，註冊手機失敗！請洽188客服專線</string>
    <string name="iii_ssl_error">網站的安全性憑證已過期！請洽188客服專線</string>
    <string name="iii_get_deviceID_error">無法取得Device ID，註冊手機失敗！請洽188客服專線</string>
    <string name="iii_server_return_error">伺服器回傳資料錯誤，請先關閉程式，請稍後或移動您的所在地至訊號良好位置，再重新開啓程式一次！</string>
    <string name="iii_register_error">因不明原因，無法成功註冊手機！請洽188客服專線</string>
    <string name="iii_register_num_over_limit">註冊的手機數超過群組限制，無法成功加入此手機！</string>
    <string name="iii_p12_download_ok">重新註冊成功</string>
    <string name="iii_plz_use_twm_net">目前僅提供離線閱讀！請使用台灣大哥大網路連線，並將APN設定變更成twm，再重新啓動即可正常運作！</string>
    <string name="iii_server_busy_notregister">伺服器系統繁忙，無法驗證手機，請重新註冊手機！</string>
    <string name="iii_server_register_error">伺服器註冊手機發生錯誤！請洽188客服專線</string>
    <string name="iii_cant_update_phone">無法置換已註冊的手機！請重新啟動閱讀器，或請洽188客服專線</string>
    <string name="iii_server_no_response">伺服器目前無回應，請稍後再試</string>
    <string name="iii_server_SocketException">網路連線失敗，無法下載書籍！由於您所在的位置網路連線品質不佳或擁塞，請稍後或移動您的所在地再試。</string>
    <string name="iii_server_SocketTimeout">網路連線失敗，無法下載書籍！由於您所在的位置網路連線品質不佳或擁塞，請稍後或移動您的所在地再試。</string>
    <string name="iii_server_other_error">下載過程發生錯誤！</string>
    <string name="iii_network_disconnect">網路無法連線，請稍後再試！</string>
    <string name="iii_check_ver_error">版本檢查失敗！由於您所在的位置網路連線品質不佳或擁塞，請稍後或移動您的所在地再試。</string>
    <string name="iii_check_backup_record">系統將覆蓋您線上閱讀紀錄，是否確認備份 ?</string>
    <string name="iii_check_download_record">系統將覆蓋您手機上閱讀紀錄，是否確認下載 ? </string>
    <string name="iii_check_backup_record_title">閱讀紀錄備份</string>
    <string name="iii_check_download_record_title">閱讀紀錄下載</string>
    <string name="iii_underline_dialog_title"> 選項 </string>
    <string name="iii_underline_dialog_action"> 劃線 </string>
    <string name="iii_underline_dialog_delete"> 刪除 </string>
    <string name="iii_underline_dialog_cancel"> 取消 </string>
    <string name="iii_OnlineCantGetBooklist">無法連線到線上書櫃，請稍後或移動您的所在地至訊號良好位置，重新連線！</string>
    <string name="iii_CheckNetworkMessage">正在檢查網路中，請稍候...</string>
    <string name="iii_CheckVerMessage">檢查軟體更新，請稍候...</string>
    <string name="iii_NetworkNotConnMessage">沒有偵測到行動網路連線，目前只能離線閱讀！</string>
    <string name="iii_UnknowMessage">因不明原因，造成系統異常！請再重新開啓程式一次！</string>
    <string name="iii_CheckPhoneMessage">正在驗證手機中，請稍候...</string>
    <string name="iii_SyncMessage">正在同步新購書單中，請稍候...</string>
    <string name="iii_SyncSucessMessage">已成功同步新購書單</string>
    <string name="iii_get_book_list_error">連線失敗，無法同步新購買的書籍清單！請稍後或移動您的所在地至訊號良好位置，再重新開啓程式一次！</string>
    <string name="iii_online_title">線上書櫃</string>
    <string name="iii_my_title">我的書櫃</string>
    <string name="iii_VerUpdateMessage">版本更新</string>
    <string name="iii_VerUpdateMessageForce">本軟體已經有更新版本，更新軟體後才能繼續使用！</string>
    <string name="iii_VerUpdateMessageUnforce">本軟體已經有更新版本，請問是否要更新？</string>
    <string name="iii_NoNewVer">無新版本</string>
    <string name="iii_ServerTimeOutMessage">無法連線到伺服器，目前只能離線閱讀！由於您所在的位置網路連線品質不佳或擁塞，請稍後或移動您的所在地再試。</string>
    <string name="iii_GetDeviceIDErrorMessage">無法取得Device ID，註冊手機失敗！請洽188客服專線</string>
    <string name="iii_ServerReturnErrorMessage">伺服器回傳資料錯誤，請先關閉程式，請稍後或移動您的所在地至訊號良好位置，再重新開啓程式一次！</string>
    <string name="iii_server_busy_only_unline">伺服器系統繁忙，無法驗證手機，目前只能離線閱讀！請稍後或移動您的所在地再試。</string>
    <string name="iii_manage_domain">註冊手機超過限制，是否從已註冊手機擇一刪除？</string>
    <string name="iii_last_page_upload_progress">上傳最後閱讀頁中...</string>
    <string name="iii_last_page_download_progress">同步最後閱讀頁中...</string>
    <string name="iii_decrypt_progress">解密中...</string>
    <string name="iii_unzip_progress">讀取中...</string>
    <string name="iii_last_page_upload_success">最後閱讀頁上傳成功</string>
    <string name="iii_last_page_upload_fail">最後閱讀頁上傳失敗</string>
    <string name="iii_last_page_sync_success">最後閱讀頁同步成功</string>
    <string name="iii_last_page_sync_fail">最後閱讀頁同步失敗</string>
    <string name="iii_file_error">檔案毀損</string>
    <string name="iii_decrypt_error">註冊檔錯誤無法開啟，請移除本書後至線上書櫃重新下載即可。</string>
    <string name="iii_decrypt_io_error">無法開啟加密檔案，請移除本書後至線上書櫃重新下載即可。</string>
    <string name="iii_decrypt_permission_error">權限不符，無法開啟加密檔案！</string>
    <string name="iii_decrypt_p12_error">註冊檔不匹配，無法開啓加密檔案！請確認檔案是否毀損，或移除本書後至線上書櫃重新下載即可。</string>
    <string name="iii_decode_error">無法開啟檔案</string>
    <string name="iii_parse_error">無法取得書籍資料</string>
    <string name="iii_page_no_text">本頁無可劃線內容</string>
    <string name="iii_error">錯誤</string>
    <string name="iii_bookmark_overflow">本書書籤已超過十筆，請至索引頁刪除再行新增!</string>
    <string name="iii_annotation_overflow">本書註記已超過十筆，請至索引頁刪除再行新增!</string>
    <string name="iii_underline_overflow">本書劃線已超過十筆，請至索引頁刪除再行新增!</string>
    <string name="iii_search_hint">書籍全文檢索可能需要數分鐘的時間，請問是否進行搜尋?</string>
    <string name="iii_search_not_found">查無結果，請重新搜尋</string>
    <string name="iii_now_searching">搜尋中...</string>
    <string name="iii_underline_hint">請在文字上拖曳劃線</string>
    <string name="iii_underline_delete_hint">請點選已劃線文字進行刪除</string>
    <string name="iii_underline_leave">已離開劃線介面</string>
    <string name="iii_description_img">(圖片)</string>
    <string name="iii_description_hr">(分隔線)</string>
    <string name="iii_SearchBook">請輸入名稱：</string>
    <string name="iii_ann_hint">請輸入註記：</string>
    <string name="iii_reader_catalog_jump_bottom">目錄及跳頁</string>
    <string name="iii_reader_bookmark_index_bottom">書籤索引</string>
    <string name="iii_reader_highlight_index_bottom">劃線索引</string>
    <string name="iii_reader_notes_index_bottom">註記索引</string>
    <string name="iii_reader_book_info_bottom">本書資訊</string>
    <string name="iii_reader_notes_writing">註記書寫</string>
    <string name="iii_setting">設定</string>
    <string name="iii_publisher">出版社：</string>
    <string name="iii_authors">作者：</string>
    <string name="iii_tag_download">""</string>
    <string name="iii_setting_default">設定項目已回復初始值</string>
    <string name="iii_setting_logout_success">已成功登出，自動重啟應用程式</string>
    <string name="iii_setting_logout_failed">登出失敗，請確認網路連線</string>
    <string name="iii_search_tip">請輸入欲查詢的關鍵字</string>
    <string name="iii_check_del_book">刪除選擇的書籍</string>
    <string name="iii_check_del_message">確認刪除</string>
    <string name="iii_long_click_del">刪除本書</string>
    <string name="iii_long_click_score">進行評分</string>
    <string name="default_color">書本預設顏色</string>
    <string name="iii_bookPath">/sdcard/aaa.epub</string>
    <string name="alert_dialog_username">使用者帳號</string>
    <string name="alert_dialog_password">使用者密碼</string>
    <string name="progress_title">請稍候</string>
    <string name="progress_message">書本內容載入中...</string>
    <string name="search_message">搜尋中...</string>
    <string name="active_state_on">已授權</string>
    <string name="active_state_off">未授權</string>
    <string name="chapter_list_title">章節目錄</string>
    <string name="bookmark_list_title">書籤列表</string>
    <string name="delete_bookmark_title">清空書籤</string>
    <string name="delete_bookmark_prompt">所有書籤將被刪除</string>
    <string name="bookmark_format">(空白:第%d句)</string>
    <string name="no_data">無資料</string>
    <string name="extend_title">延伸內容</string>
    <string name="extend_voc_title">重要字彙</string>
    <string name="extend_syn_title">同義字</string>
    <string name="extend_ant_title">反義字</string>
    <string name="extend_app_title">延伸說明</string>
    <string name="extend_voc_play">字彙發音</string>
    <string name="extend_spell_title">漢字拼音</string>
    <string name="ps_title">章節附錄</string>
    <string name="delete_book_title">刪除書本</string>
    <string name="delete_book_message">你確定要將此書本除嗎?</string>
    <string name="mereader_range_setting_title">選擇播放範圍</string>
    <string name="mereader_range_setting_item1">播放全部</string>
    <string name="mereader_range_setting_item2">播放AB範圍</string>
    <string name="mereader_range_setting_item3">只播放書籤</string>
    <string name="mereader_range_setting_item4">只播放不熟單字</string>
    <string name="mereader_range_setting_item5">只播放略熟單字</string>
    <string name="mereader_range_setting_item6">播放不熟和略熟單字</string>
    <string name="mereader_range_setting_item7">只播放已會單字</string>
    <string name="mereader_pos_setting_title">設立位置標記</string>
    <string name="mereader_pos_setting_item1">設為A點(起點)</string>
    <string name="mereader_pos_setting_item2">設為B點(終點)</string>
    <string name="setting_repeat_count">自動複讀次數</string>
    <string name="setting_gap">語句間隔時間</string>
    <string name="setting_hide_precnet">克漏字比率</string>
    <string name="setting_auto_repeat">是否自動循環播放</string>
    <string name="setting_content">台灣大哥大myBook書城24小時不打烊!  myBook store of TaiwanMobile always open for you.</string>
    <string name="setting_reset">設為預設值</string>
    <string name="setting_reset_btn">回預設</string>
    <string name="about_msg1">TWM myBook Version </string>
    <string name="about_msg2">Copyright 2010 by 臺灣大哥大　</string>
    <string name="about_msg3">技術授權：曉騰國際 MeBook　</string>
</resources>